# isamples_inabox

./: .coveragerc  .pylintrc  Dockerfile  README.md  create_hypothesis_user.py  isb.cfg  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  python-integration-test.yaml  python-integration-test.yml
docs/: analytics.md  authentication_and_identifiers.md  export_service.md  gpu_enabled_container_on_aws.md  hypothesis_integration.md  indexing_integration_test.md  relations.md
integration_tests/: test_isb_web.py  test_sitemaps.py  test_sitemaps_integration_test.py  test_solr_search_results.py  transform_identifiers.py
isamples_metadata/: GEOMETransformer.py  Model.py  OpenContextClassifierInput.py  OpenContextTransformer.py  SESARClassifierInput.py  SESARTransformer.py  SmithsonianTransformer.py  Transformer.py  metadata_constants.py  metadata_exceptions.py  metadata_models.py  solr_field_constants.py
isamples_metadata/taxonomy/: Model.py  OpenContextClassifierInput.py  SESARClassifierInput.py  classification.py  classification_helper.py  metadata_model_client.py  metadata_models.py  model.py
isamples_metadata/vocabularies/: materialType.txt  sampledfeature.txt  specimenType.txt  vocabulary_mapper.py
isb_lib/: __init__.py  core.py  geome_adapter.py  opencontext_adapter.py  sesar_adapter.py  smithsonian_adapter.py
isb_web/: analytics.py  api_types.py  auth.py  config.py  debug.py  download.py  export.py  isb_enums.py  isb_solr_connection.py  isb_solr_query.py  main.py  main_sqlmodel.py  manage.py  metrics.py  profiles.py  schemas.py  sqlmodel_database.py  vocabulary.py
notes/: solr_manage.ipynb
scripts/: consume_sitemaps.py  create_hypothesis_user.py  create_sql_lite_dump.py  create_text_dump_of_source_data.py  dump_thing_json.py  find_missing_sesar_records.py  generate_things_sitemap.py  geome_things.py  isb_things.py  load_isamples_vocabularies.py  opencontext_things.py  populate_solr_latlon_fields.py  preprocess_smithsonian.py  sesar_things.py  smithsonian_things.py  solr_reindex_template.py  update_identifiers_for_existing_things.py  update_opencontext_solr_id.py  update_opencontext_to_lastupdated.py  update_sesar_solr_id.py  update_smithsonian_ids.py
solr_schema_init/: create_isb_core_schema.py
tests/: .coveragerc  test_analytics.py  test_category_mapping.py  test_core.py  test_csv_import.py  test_datacite.py  test_download.py  test_dynamically_import_modules.py  test_export.py  test_fastapi_apps.py  test_fastapi_sqlmodel.py  test_geome_permit_parsing.py  test_isamples_metadata.py  test_isb_solr_query.py  test_metadata_model_client.py  test_metadata_models.py  test_metrics.py  test_noidy.py  test_orcid.py  test_profiles.py  test_requests_utilities.py  test_sitemap_fetcher.py  test_sitemaps.py  test_smithsonian.py  test_solr_connection.py  test_solr_result_transformer.py  test_sqlmodel_database.py  test_stac.py  test_term_model.py  test_thing_sitemap.py  test_url_utilities.py  test_utils.py  test_vocab_adapter.py  test_vocabulary_mapper.py
(+109 files in other folders)
