[tool.poetry]
name = "isamples_inabox"
version = "0.5.1"
description = "Python implementation of iSamples-in-a-box components"
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "Apache 2.0"
packages = [
    { include = "isb_lib"},
    { include = "isb_web"},
    { include = "isamples_metadata"},
]

[tool.poetry.dependencies]
python = "^3.11"
click = "*"
click-config-file = "*"
fastapi = "0.104.0"
uvicorn = {version = "*", extras=["standard"]}
aiofiles = "*"
igsn-lib = {git = "https://github.com/isamplesorg/igsn_lib.git", rev = "main"}
isamples_frictionless = {git = "https://github.com/isamplesorg/isamples_frictionless.git", rev = "main"}
accept-types = "*"
shapely = "*"
geojson = "*"
Jinja2 = "*"
aiofile = "*"

sqlmodel = "*"
Authlib = "*"
itsdangerous = "*"
starlette-oauth2-api = "*"
httpx = "*"

regex = "*"
h3 = {version = "^4.0.0b1", allow-prereleases = true}
aiodns = "*"
aiohttp = "*"
rdflib = "*"

connegp = "*"
openpyxl = "*"
xlrd = "*"

PyJWT = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
jupyter = "*"
nbterm = "*"
flake8 = "*"
pipdeptree = "*"
coverage = "*"
pytest-cov = "*"
setuptools = "*"

[tool.poetry.scripts]
sesar_things = "scripts.sesar_things:main"
geome_things = "scripts.geome_things:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
